--- a/phpcms/templates/default/member/content_published.html
+++ b/phpcms/templates/default/member/content_published.html
@@ -25,7 +25,7 @@
 	<tr>
 	<td align="center">{$info['id']}</td>
 	<td align="left"><a href="{$info[url]}" target="_blank" title="{$info['title']}">{str_cut($info['title'], 60)}</a> {if $info[status]==0}<font color="red">{L('reject_content')}</font>{elseif $info[status]!='99'}<font color="#1D94C7">待审中</font>{/if}</td>
-	<td align="center"><a href="{if strpos($CATEGORYS[$info['catid']][url],'http://')===false}{$siteurl}{/if}{$CATEGORYS[$info['catid']][url]}" target="_blank">{$CATEGORYS[$info['catid']][catname]}</a></td>
+	<td align="center"><a href="{if strpos($CATEGORYS[$info['catid']][url],'http://')===false && strpos($CATEGORYS[$info['catid']][url],'https://')===false}{$siteurl}{/if}{$CATEGORYS[$info['catid']][url]}" target="_blank">{$CATEGORYS[$info['catid']][catname]}</a></td>
 	<td align="center">{date('Y-m-d',$info['inputtime'])}</td>
 	<td align="center">
 	{if $info[status]==99}<font color="green">{L('pass')}</font>{elseif !$info[flag]}<a href="index.php?m=member&c=content&a=edit&catid={$info[catid]}&id={$info[id]}"><font color="red">{L('edit')}</font></a> | <a href="index.php?m=member&c=content&a=delete&catid={$info[catid]}&id={$info[id]}">删除</a>{else}<a href="index.php?m=member&c=content&a=edit&catid={$info[catid]}&id={$info[id]}"><font color="red">{L('edit')}</font></a> | <a href="index.php?m=member&c=content&a=delete&catid={$info[catid]}&id={$info[id]}">删除</a>{/if}
