--- a/phpcms_code/phpcms/templates/default/formguide/show_upload_case.html
+++ b/phpcms_code/phpcms/templates/default/formguide/show_upload_case.html
@@ -11,7 +11,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="applicable-device" content="pc,mobile">
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.min.css" crossorigin="anonymous">
     <link href="{PLUGIN_STATICS_PATH}bootstrap-fileinput/css/fileinput.min.css" media="all" rel="stylesheet" type="text/css"/>
 
@@ -111,7 +111,7 @@
 	})();
 </script>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
 <script src="{PLUGIN_STATICS_PATH}bootstrap-fileinput/js/plugins/piexif.min.js" type="text/javascript"></script>
 <script src="{PLUGIN_STATICS_PATH}bootstrap-fileinput/js/fileinput.min.js" type="text/javascript"></script>
 <script src="{PLUGIN_STATICS_PATH}bootstrap-fileinput/js/locales/zh.js" type="text/javascript"></script>
