--- a/phpcms_code/phpcms/templates/default/formguide/show_js.html
+++ b/phpcms_code/phpcms/templates/default/formguide/show_js.html
@@ -1,4 +1,4 @@
-<script language="javascript" type="text/javascript" src="{JS_PATH}dialog.js"></script>
+<script type="text/javascript" src="{JS_PATH}jquery.min.js"></script>
 <link href="{CSS_PATH}table_form.css" rel="stylesheet" type="text/css" />
 <link href="{CSS_PATH}dialog.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="{JS_PATH}dialog.js"></script>
@@ -24,7 +24,7 @@
 {/loop}
 <tr>
 <td></td>
-<td><div class="submit ib"><input type="submit"{if $no_allowed} disabled=""{/if} name="dosubmit" id="dosubmit" value=" 提交 "></div> {if $no_allowed}您还没有<a href="{APP_PATH}index.php?m=member&c=index&alogin&forward={urlencode(HTTP_REFERER)}" style="color:red">登录</a>或<a href="" style="color:red">注册</a>网站，请登录后提交表单{/if}</td>
+<td><div class="submit ib"><input type="hidden" name="token" value="{$_SESSION['token']}"><input type="submit"{if $no_allowed} disabled=""{/if} name="dosubmit" id="dosubmit" value=" 提交 "></div> {if $no_allowed}您还没有<a href="{APP_PATH}index.php?m=member&c=index&alogin&forward={urlencode(HTTP_REFERER)}" style="color:red">登录</a>或<a href="" style="color:red">注册</a>网站，请登录后提交表单{/if}</td>
 </tr>
 	</tbody>
 </table>
