--- a/phpcms_code/phpcms/modules/formguide/install/templates/show.html
+++ b/phpcms_code/phpcms/modules/formguide/install/templates/show.html
@@ -27,6 +27,7 @@
 {/loop}
 	</tbody>
 </table>
+<input type="hidden" name="token" id="token" value="">
 <input type="submit" name="dosubmit" id="dosubmit" value=" 提交 ">&nbsp;<input type="reset" value=" 取消 ">
 </form>
 			</div>
@@ -57,6 +58,9 @@
         </div>
     </div>
 </div>
+<script>
+	$.get("{APP_PATH}api.php", { op: 'token', formid: "{$formid}"}, function(data){$("#token").val(data);});
+</script>
 <script type="text/javascript">
 <!--
 	function show_ajax(obj) {
